SERVER-128250 Add interrupt translation in WasmtimeImplScope::invoke() (#55087)

GitOrigin-RevId: a09f305e5a6cde002740b30a3e16ebd6a6d4f35b